[gd_scene load_steps=6 format=3 uid="uid://ce0mxy14nf7c4"]

[ext_resource type="Script" path="res://scenes/switchable_block_red.gd" id="1_0mgeo"]
[ext_resource type="Texture2D" uid="uid://bc3phra6l1p7i" path="res://sprites/red_block_active_1.png" id="1_pl2lb"]
[ext_resource type="Texture2D" uid="uid://b68r7hdt0cl1y" path="res://sprites/red_block_inactive_1.png" id="2_ocvok"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cg6v3"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61m2a"]
size = Vector2(16, 16)

[node name="SwitchableBlockRed" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_0mgeo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cg6v3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_61m2a")

[node name="ActiveSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_pl2lb")

[node name="InactiveSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ocvok")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
